--- a/app/public/home.html
+++ b/app/public/home.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Tables Page</title>
+  <title>Friend Finder</title>
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -27,7 +27,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/friends">API Friends List</a> | <a href="http://www.github.com/dasseya1/FriendFinder">Github Repo</a></p>
+        <p><a href="/api/friends">API Friends List</a> | <a href="http://www.github.com/dasseya1/FriendFinder">GitHub Repo</a></p>
       </div>
     </footer>
 
