--- a/app/public/home.html
+++ b/app/public/home.html
@@ -27,7 +27,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/friends">API Friends List</a> | <a href="http://www.github.com/dasseya1/FriendFinder">GitHub Repo</a></p>
+        <p><a href="/api/friends">API Friends List</a> | <a href="https://www.github.com/dasseya1/FriendFinder">GitHub Repo</a></p>
       </div>
     </footer>
 
